# urirun-connector-browser-control

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  fake_browser.py  run-smoke.sh
examples/: README.md  cdp-flat-handler.py  deploy-kvm.sh  deploy-uribrowser.sh  kvm-bindings.json  kvm-flat-handler.py  office-session.py  quickstart.sh  read-and-screenshot.sh  social-publish.md  uribrowser-bindings.json  uribrowser-bridge.py
tests/: test_connector.py  test_contract.py
urirun_connector_browser_control/: __init__.py  _exec.py  cli.py  connector.manifest.json  contracts.json  core.py
